Thu Aug 19 23:46:13 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c: fix a problem for monitoring missing
	  files
	* tests/result/6 tests/scenario/6.tst: added a regression test
	  for it.

Thu Aug 19 15:38:55 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* Makefile.am configure.in gamin.spec.in: release of 0.0.6
	* doc/gamin-api.xml doc/gamin-refs.xml: rebuilt

Thu Aug 19 14:40:58 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: fixing dnotify and FAM events sequences when
	  monitoring an existing file.
	* tests/result/5 tests/scenario/5.tst: added a specific test
	* TODO: tests need fixing to avoid paths problems

Thu Aug 19 13:54:36 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_node.h server/gam_server.c
	  server/gam_server.h server/gam_subscription.c: work toward fixing the
	  file dnotify back-end and FAM like-processing

Wed Aug 18 14:48:33 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: fix path
	* doc/debugging.txt: add .gdbinit hint

Wed Aug 18 13:07:03 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* TODO: updated
	* doc/debugging.txt: added doc on how to debug gamin
	* libgamin/Makefile.am libgamin/gam_fork.c server/Makefile.am:
	  moved gam_server to /usr/libexec instead of /usr/bin following
	  Mark suggestion

Tue Aug 17 17:48:05 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c: working on fixing file checking notification
	* server/gam_poll.c server/gam_poll.h: start on integrating polling

Tue Aug 17 16:57:58 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_server.c: a bit of framework which looks safe too

Tue Aug 17 16:55:16 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* gam_tree.c: cleanup while chasing regression in make tests

Thu Aug 12 19:44:02 EDT 2004 Daniel Veillard <veillard@redhat.com>

	* tests/Makefile.am: use $GAMIN_DEBUG_SERVER so that regression