@@ -1,0 +1,13 @@
+mkdir test1
+connected to test
+monfile test1/missing 0
+1: /u/veillard/gamin/tests/test1/missing Deleted: NULL
+1: /u/veillard/gamin/tests/test1/missing EndExist: NULL
+mkfile test1/missing
+1: /u/veillard/gamin/tests/test1/missing Created: NULL
+append test1/missing
+1: /u/veillard/gamin/tests/test1/missing Changed: NULL
+rmfile test1/missing
+1: /u/veillard/gamin/tests/test1/missing Deleted: NULL
+disconnected
+rmdir test1
